--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "start": "vite"
   },
   "dependencies": {
-    "astro": "^5.1.1"
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "^5.1.1",
+    "swiper": "^11.1.15",
+    "vite": "^6.0.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
